<resources>
    <string name="app_name">LearningHiragana</string>
    <string name="app_title">HiraganaQuiz!</string>
    <string name="welcome">WELCOME</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="start_button">Start</string>
    <string name="hint">Name</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="hey_congratulation">Hey, Congratulation!</string>
    <string name="username">Username</string>
    <string name="finish">FINISH</string>
</resources>